# internal/delivery/routes/route.go
@@ -2,6 +2,7 @@ package routes
 
 import (
 	"github.com/SyahrulBhudiF/Vexora-Api/internal/delivery/middleware"
+	"github.com/SyahrulBhudiF/Vexora-Api/internal/domains/playlist"
 	"github.com/SyahrulBhudiF/Vexora-Api/internal/domains/user"
 	"github.com/gofiber/fiber/v2"
 	"github.com/gofiber/fiber/v2/middleware/cache"
@@ -9,9 +10,10 @@ import (
 )
 
 type Route struct {
-	App            *fiber.App
-	UserHandler    *user.UserHandler
-	AuthMiddleware *middleware.AuthMiddleware
+	App             *fiber.App
+	UserHandler     *user.UserHandler
+	AuthMiddleware  *middleware.AuthMiddleware
+	PlaylistHandler *playlist.PlaylistHandler
 }
 
 func (r *Route) InitV1() {
@@ -38,4 +40,6 @@ func (r *Route) InitializeUserRoutes(router fiber.Router) {
 	router.Put("/user", r.AuthMiddleware.EnsureAuthenticated, middleware.EnsureJsonValidRequest[user.UpdateProfileRequest], r.UserHandler.UpdateProfile)
 	router.Put("/user/profile-picture", r.AuthMiddleware.EnsureAuthenticated, r.UserHandler.UploadProfilePicture)
 	router.Put("/user/change-password", r.AuthMiddleware.EnsureAuthenticated, middleware.EnsureJsonValidRequest[user.ChangePasswordRequest], r.UserHandler.ChangePassword)
+
+	router.Get("/random-playlist", r.AuthMiddleware.EnsureAuthenticated, r.PlaylistHandler.GetRecommendations)
 }
